tests/errors/surf_num_15.ki
# Element-wise tensor division by a zero element must throw.
var t = import("tensor")
discard t.Tensor([1.0]) / t.Tensor([0.0])
